# git-ca

./: .env.example  .gitignore  Cargo.toml  README.md  dist-workspace.toml  release.toml
.github/workflows/: publish-crates.yml  publish-homebrew.yml  publish-npm.yml  release.yml
docs/: development.md
docs/man/: git-ca.1
scripts/: release-local.sh
src/: cli.rs  error.rs  main.rs
src/auth/: copilot_token.rs  device_flow.rs  mod.rs  store.rs
src/auth/codex/: jwt.rs  mod.rs  oauth.rs  pkce.rs  token.rs
src/codex/: chat.rs  client.rs  mod.rs  sse.rs
src/commit_msg/: mod.rs  prompt.rs
src/config/: mod.rs  paths.rs
src/copilot/: chat.rs  client.rs  mod.rs  models.rs
src/git/: commit.rs  diff.rs  mod.rs  pr.rs
src/pr_msg/: mod.rs
