[package]
name = "git-ca"
version = "0.1.0"
edition = "2021"
description = "git plugin that drafts commit messages using GitHub Copilot"
license = "MIT"
repository = "https://github.com/hankcraft/git-ca"
homepage = "https://github.com/hankcraft/git-ca"

[[bin]]
name = "git-ca"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[dev-dependencies]
wiremock = "0.6"

[profile.release]
lto = "thin"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
